RESOLVED FIXED205072
Don't assert in HTTPServer::respondToRequests when connections fail
https://bugs.webkit.org/show_bug.cgi?id=205072
Summary Don't assert in HTTPServer::respondToRequests when connections fail
Alex Christensen
Reported 2019-12-10 11:39:21 PST
Don't assert in HTTPServer::respondToRequests when connections fail
Attachments
Patch (1.64 KB, patch)
2019-12-10 11:40 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-12-10 11:40:22 PST
Alex Christensen
Comment 2 2019-12-10 11:40:25 PST
WebKit Commit Bot
Comment 3 2019-12-12 13:46:58 PST
Comment on attachment 385290 [details] Patch Clearing flags on attachment: 385290 Committed r253444: <https://trac.webkit.org/changeset/253444>
WebKit Commit Bot
Comment 4 2019-12-12 13:47:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.