Don't assert in HTTPServer::respondToRequests when connections fail https://bugs.webkit.org/show_bug.cgi?id=205072 <rdar://problem/57718266>

Patch by Alex Christensen <achristensen@webkit.org> on 2019-12-12
Reviewed by Alexey Proskuryakov.

We have records that this assertion is being hit, but it's probably when things are being torn down after the test passes.
If someone actually has a connection failure that breaks a test, we'll notice elsewhere.

* TestWebKitAPI/cocoa/HTTPServer.mm:
(TestWebKitAPI::HTTPServer::respondToRequests):

Canonical link: https://commits.webkit.org/218370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253444 268f45cc-cd09-0410-ab3c-d52691b4dbfc